modicando index y header

--- a/menus+desplegable/balcones.html
+++ b/menus+desplegable/balcones.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Mallas para Balcones | Esqudo Mallas</title>
+	<meta name="description" content="Empresa dedicada a la seguridad de niños y mascotas a través de mallas protectoras en ventanas, escaleras, balcones, barandas, piscinas y más. Para prevenir accidentes, de una forma confiable, estética y segura. ¡Visítanos ahora!">
+	<meta name="keywords" content="mallas de seguridad, mallas protectoras, mallas anticaídas, mallas de seguridad precios, redes protectoras, redes de seguridad, seguridad, ventanas seguras, balcones seguros, escaleras seguras, rejas, rejas de madera, mallas para piscinas, seguridad niños, seguridad bebes, protección de niños, protección bebes, protección para mascotas, protección para gatos, instalación de mallas, mantenimiento de mallas, mallas transparentes, pequemallas, mallas y mallas, mallas kids">
+
+
 
 	<!--Traje font-family de Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
 
-
-    <title>Esqudo Protecciones | Balcones</title>
 
 <!--link de HTML con CSS estilos-->
 <link rel="stylesheet" href="../css/estilos.css">
@@ -53,7 +56,7 @@ alt="logotipo de Esqudo Protecciones">
 		</li>	
 
 	<li class="header__navegador">
-		<a href="#"><b>Servicios</b></a>
+		<a href="../secciones/servicios.html"><b>Servicios</b></a>
 		
 		</li>
 
