--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title> Inicio Esqudo | Mallas Protectoras</title>
+	<meta name="description" content="Empresa dedicada a la seguridad de niños y mascotas a través de mallas protectoras en ventanas, escaleras, balcones, barandas, piscinas y más. Para prevenir accidentes, de una forma confiable, estética y segura. ¡Visítanos ahora!">
+	<meta name="keywords" content="mallas de seguridad, mallas protectoras, mallas anticaídas, mallas de seguridad precios, redes protectoras, redes de seguridad, seguridad, ventanas seguras, balcones seguros, escaleras seguras, rejas, rejas de madera, mallas para piscinas, seguridad niños, seguridad bebes, protección de niños, protección bebes, protección para mascotas, protección para gatos, instalación de mallas, mantenimiento de mallas, mallas transparentes, pequemallas, mallas y mallas, mallas kids">
+
 	<!--Traje font-family de Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
-
-    <title>Esqudo Protecciones | Inicio</title>
+	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
 	<!--Bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -21,29 +26,23 @@
 
 <body class="body__background"> 
 <!-- inicio del header-->
-	    	
-		<div class="cuadrado"> 
-			<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES</h1></div>
+	    
+		<section class="cuadrado">
+		<div>
+			<img class="esqudoLogo" src="imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
 		</div>
-		</div>
-		<style>
-		.cuadrado{
-		padding:50px;
-		margin:10px;
-		background-color: #0000FF;
-		border: solid 1px blue;
-		color: white;
-		background: linear-gradient(120deg, blue 40%, cyan);
-		}
-		</style>
 
-		<div id="ejeCentral">
-		<img class="esqudoLogo" src="imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
+		<div> 
+		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
 		</div>
+		</div>
+		
+		</section>
 	
-<!--barra de navegación-->		
-
-<nav id="menu" class="header__navegador">
+<section class="navbar_redes--header">
+		<!--barra de navegación-->		
+<div>
+		<nav id="menu" class="header__navegador">
 		<ul>
 		<li class="header__navegador">
 			<a href="#"><b>Inicio</b></a>
@@ -79,27 +78,34 @@
 		</ul>
 		
 	</nav>
-
+</div>
 	<!--Fin de barra de navegación-->
 
 		<br>
-
-<section id="section5">
 <!--redes sociales para Esqudo Protecciones-->
-<div>
-	<img class="btn--facebook" src="imagenes/logo-facebook.JPG" alt="logotipo de Facebook"> 
-	<img class="btn--twitter" src="imagenes/logo-twitter.JPG" alt="logotipo de Twitter">
-	<img class="btn--youtube" src="imagenes/logo-youtube.JPG" alt="logotipo de Youtube">
-</div>
+
+<section class="redes_icons--header">
+<nav>
+	<ul class="redes_links--header">
+	<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
+	<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
+	<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
+	<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
+	</ul>
+</nav>
+</section>
 
 </section>
-		
+
 	</header>
 
 <!--fin del header-->
 
 <!--Inicio del main-->
 	<main>
+		<section class="mainpicture--index">
+			<img src="imagenes/foto_index.jpg" alt="foto principal de malla en un balcon"> 
+		</section>
 		<br>
 		<br>
 		<!--Carousel Bootstrap-->
@@ -136,6 +142,21 @@
 		</section>
 		
 		<!--Fin del Carousel Bootstrap-->
+
+		<!--Beneficios-->
+
+	<div class="cuadrado--servicios"><b><h3 class="h3servicios--styles">BENEFICIOS DE NUESTRAS MALLAS PROTECTORAS</h3></b>
+	
+		<div><h4 class="h4_5_6servicios--styles">Te ayudamos con la seguridad de tus hijos y mascotas</h4></div>
+		<div><p class="texth4_5_6--styles"> Nuestra empresa nace con la finalidad de evitar accidentes en el hogar brindando seguridad y protección a niños y mascotas.
+				Las caídas desde ventanas, balcones, barandas y piscinas son accidentes con muy graves consecuencias, con nuestro enmallado, asesoramiento y verificación técnica, podremos darte la mejor solución a tu principal objetivo de proteger tus hijos.</p></div>
+	
+		<div><h4 class="h4_5_6servicios--styles">Los mejores materiales</h4></div>
+		<div><p class="texth4_5_6--styles"> Instalamos un sistema de protección anticaídas elaborado en mallas 100% nylon multifilamento trenzados color blanco y transparente de alta textura y resistencia a (100 Kg.x m2) con su respectivo tratamiento UV, anti-salitre y sobre todo anti-alérgico.</p></div>
+			
+		<div><h4 class="h4_5_6servicios--styles">Personal calificado</h4></div>
+		<div><p class="texth4_5_6--styles"> Personal altamente capacitado y calificado en asesoramiento e instalación colabora de manera eficiente y efectiva a su servicio. Buscamos hacer un trabajo excelente que mantenga el aspecto visual y estetico de la arquitectura.</p></div>
+	</div>
 		
 		<section id="section2">
 
