--- a/menus+desplegable/piscinas.html
+++ b/menus+desplegable/piscinas.html
@@ -4,14 +4,183 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Mallas para Pisicnas | Esqudo Mallas</title>
+	<meta name="description" content="Empresa dedicada a la seguridad de niños y mascotas a través de mallas protectoras en ventanas, escaleras, balcones, barandas, piscinas y más. Para prevenir accidentes, de una forma confiable, estética y segura. ¡Visítanos ahora!">
+	<meta name="keywords" content="mallas de seguridad, mallas protectoras, mallas anticaídas, mallas de seguridad precios, redes protectoras, redes de seguridad, seguridad, ventanas seguras, balcones seguros, escaleras seguras, rejas, rejas de madera, mallas para piscinas, seguridad niños, seguridad bebes, protección de niños, protección bebes, protección para mascotas, protección para gatos, instalación de mallas, mantenimiento de mallas, mallas transparentes, pequemallas, mallas y mallas, mallas kids">
+
+
 	<!--Traje font-family de Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
 
-    <title>Piscinas|Productos</title>
-
 	<!--link de HTML con CSS estilos-->
-	<link rel="stylesheet" href="css/estilos.css">
-		
+	<link rel="stylesheet" href="../css/estilos.css">
+
 </head>
+
+<body class="body__backgroundproducts">
+
+
+	<!-- inicio del header-->
+	    	
+	<div class="cuadrado"> 
+		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES</h1></div>
+	</div>
+	</div>
+<style>
+.cuadrado{
+padding:50px;
+margin:10px;
+background-color: #0000FF;
+border: solid 1px blue;
+color: white;
+background: linear-gradient(120deg, blue 40%, cyan);
+}
+</style>
+
+<div id="ejeCentral">
+<img class="esqudoLogo" src="../imagenes/esqudo_logo.png"
+alt="logotipo de Esqudo Protecciones">
+</div>
+
+<!--barra de navegación-->		
+<nav id="menu" class="header__navegador">
+	<ul>
+	<li class="header__navegador">
+		<a href="../index.html"><b>Inicio</b></a>
+		
+		</li>	
+
+	<li class="header__navegador">
+		<a href="../secciones/servicios.html"><b>Servicios</b></a>
+		
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/productos.html"><b>Productos</b></a>
+		
+
+		<ul>
+			<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
+			<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
+			<li><a href="#">Balcones</a></li>
+			<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
+			</ul>			   
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/somos.html"><b>Somos</b></a>
+		
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
+		
+		</li>
+	</ul>
+	
+</nav>
+<!--Fin de barra de navegación-->	
+
+<br>
+
+<section id="section5">
+<!--redes sociales para Esqudo Protecciones-->
+<div>
+	<img class="btn--facebook" src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook">
+	<img class="btn--twitter" src="../imagenes/logo-twitter.JPG" alt="logotipo de Twitter">
+	<img class="btn--youtube" src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube">
+</div>
+
+</section>
+
+</header>
+
+<!--fin del header-->
+
+<div>
+
+<section id="section2-ventanas">
+
+	<p><b><h2 class="h2Productos">MALLAS PARA PISCINAS</h2></b></p>
+	
+</section>
+
+
+
+</main>
+
+<!--inicio de footer-->
+
+
+<nav>
+		
+	<div class="cuadrado">Desarrollado por M@aster</div>
+	<style>
+	.cuadrado{
+	padding:50px;
+	margin:10px;
+	background-color: #0000FF;
+	border: solid 1px blue;
+	color: white;
+	}
+	</style>
+
+</nav>
+
+	<br>
+<nav class="footer_navegador">
+	<ul>
+
+	<li class="footer_navegador">	
+		<a href="#"><b>Inicio</b></a>
+
+	</li>
+
+	<li class="footer_navegador">
+		<a href="#"><b>Testimonios</b></a>
+	</li>
+	
+	<li class="footer_navegador">
+		<a href="#"><b>Clientes</b></a>
+
+	</li>	
+	
+	<li class="footer_navegador">
+		<a href="#"><b>Blogs</b></a>
+		
+	</li>
+	
+	<li class="footer_navegador">
+		<a href="#"><b>Agendar visita a domicilio</b></a>
+		
+	</li>
+	
+	</ul>
+
+</nav>		
+	
+
+<section>
+<!--canales de comunicación-->
+<div id="section6">
+	<img src="../imagenes/mail-icon.jpg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
+	<img src="../imagenes/phone-icon.jpg" alt="imagen de un telefono para contactarse con Esqudo">
+	<img src="../imagenes/whatsapp-icon.jpg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
+
+</div>
+
+</section>
+
+<div class="esqudoCopyright">
+<p>Esqudo Protecciones - © Copyright 2021</p>
+</div>
+
+	
+<br>	
+<!--fin del footer-->
+
+</body>
+
+</html>
