creando nuevos html

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -55,7 +55,7 @@
 			</li>
 
 		<li class="header__navegador">
-			<a href="#"><b>Productos</b></a>
+			<a href="../secciones/productos.html"><b>Productos</b></a>
 			
 
 			<ul>
@@ -105,65 +105,17 @@
 
     <main>
 
-        <p><b><h2 class="h2Servicios">PRODUCTOS</h2></b></p>
+        <p><b><h2 class="h2Servicios">PRODUCTOS PARA EL HOGAR Y EMPRESAS</h2></b></p>
 		<br>
-
-		<section class="section1-1" id="section1">
-
-			<img src="../imagenes/accesorios.JPG"
-			alt="cartel del producto accesorios de seguridad para el hogar"> <br>	
+		<section id="estilos-ventanas" class="fondo-ventanas">
+	
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/ventana-2contexto.jpeg" alt="malla protectora instalada en ventana"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/escalera-3contexto.jpeg" alt="malla protectora instalada en escalera"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/balcon-2contexto.jpeg" alt="malla protectora instalada en balcone"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-2contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
 			
-			<img src="../imagenes/produc-accesorios.jpg"
-			alt="imagen del producto accesorios para el hogar">
-	
-			<p>Accesorios de prevención para el hogar</p>
-			<img src="../imagenes/vermas.jpg"
-			alt="imagen del enlace para ver mas información del producto accesorios para el hogar">
-
-		</section>
-		<br><br><br>
-
-    
-		<section id="section2">
-			<img src="../imagenes/mallas-hogar.jpg"
-			alt="cartel del producto mallas para el hogar"> <br>
-			
-			<img src="../imagenes/produc-mallasprotectoras.JPG"
-			alt="foto del producto mallas para el hogar">
-	
-			<p>Mallas anticaidas para el hogar</p>
-			<img src="../imagenes/vermas.jpg"
-			alt="imagen del enlace para ver mas información del producto mallas para el hogar">
-
-		</section>
-		<br><br><br>
-
-		<section id="section3">
-			<img src="../imagenes/mallas-construccion.JPG"
-			alt="cartel del producto mallas para el hogar"> <br>
-	
-			<img src="../imagenes/produc-mallasconstrucciones.JPG"
-			alt="foto del producto mallas anticaidas para construcción">
-	
-			<p>Mallas anticaidas para construcción</p>
-			<img src="../imagenes/vermas.jpg"
-			alt="imagen del enlace para ver mas información del producto mallas anticaidas para construcción">
-
-		</section>
-		<br><br><br>
-
-		<section id="section4">
-			<img src="../imagenes/mallas-deportivas.JPG"
-			alt="cartel del producto mallas deportivas"> <br>
-	
-			<img src="../imagenes/produc-mallasdeportivas.JPG"
-			alt="foto del producto mallas deportivas">
-	
-			<p>Mallas deportivas</p>
-			<img src="../imagenes/vermas.jpg"
-			alt="imagen del enlace para ver mas información del producto mallas deportivas">
-
-		</section>
+			</section>
+		
 		<br><br><br>
 
     </main>
