--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -153,17 +153,20 @@
 
 <!--Beneficios-->
 
-	<div class="cuadrado--servicios"><b><h3 class="h3servicios--styles">BENEFICIOS DE NUESTRAS MALLAS PROTECTORAS</h3></b>
+	<div class="cuadrado--servicios"><b><h3 class="h3servicios--styles">NUESTROS SERVICIOS SE CARACTERIZAN POR:</h3></b>
 	
-		<div><h4 class="h4_5_6servicios--styles">Te ayudamos con la seguridad de tus hijos y mascotas</h4></div>
-		<div><p class="texth4_5_6--styles"> Nuestra empresa nace con la finalidad de evitar accidentes en el hogar brindando seguridad y protección a niños y mascotas.
-				Las caídas desde ventanas, balcones, barandas y piscinas son accidentes con muy graves consecuencias, con nuestro enmallado, asesoramiento y verificación técnica, podremos darte la mejor solución a tu principal objetivo de proteger tus hijos.</p></div>
+		<div><h4 class="h4_5_6servicios--styles">PUNTUALIDAD Y RESPONSABILIDAD</h4></div>
+		<div><p class="texth4_5_6--styles"> Nuestro equipo humano permanentemente es capacitado sobre la importancia de ser puntuales y responsanbles de todas nuestras decisiones y acciones que se tomen
+			antes, durante y después de todos los servicios que brindamos.</p></div>
 	
-		<div><h4 class="h4_5_6servicios--styles">Los mejores materiales</h4></div>
-		<div><p class="texth4_5_6--styles"> Instalamos un sistema de protección anticaídas elaborado en mallas 100% nylon multifilamento trenzados color blanco y transparente de alta textura y resistencia a (100 Kg.x m2) con su respectivo tratamiento UV, anti-salitre y sobre todo anti-alérgico.</p></div>
+		<div><h4 class="h4_5_6servicios--styles">EXPERIENCIA Y GARANTIA</h4></div>
+		<div><p class="texth4_5_6--styles"> Instalamos, mantenemos e inspeccionamos sistemas de mallas protectoras por más de 10 años, nuestra experiencia avala la calidad de nuestros servios. Por lo cual brindamos una garantia
+			de dos (02) años en nuestro servicio de instalación. En todo momento buscamos exceder las expectativas de nuestros clientes.</p></div>
 			
-		<div><h4 class="h4_5_6servicios--styles">Personal calificado</h4></div>
-		<div><p class="texth4_5_6--styles"> Personal altamente capacitado y calificado en asesoramiento e instalación colabora de manera eficiente y efectiva a su servicio. Buscamos hacer un trabajo excelente que mantenga el aspecto visual y estetico de la arquitectura.</p></div>
+		<div><h4 class="h4_5_6servicios--styles">LA ATENCIÓN AL CLIENTE</h4></div>
+		<div><p class="texth4_5_6--styles"> Todo nuestro equipo humano, tanto el personal de oficina como el personal técnico de campo siempre tendrá una actitud servicial y de empatía, antes durante y 
+			después de completar el servicio contratado a ESQUDO MALLAS PROTECTORAS. Constantemente encuestamos a nuestros clientes para recibir su feedback e identificar las oportunidades
+			de mejora en nuestros procesos.</p></div>
 	</div>
 	
 <br><br><br>
