--- a/secciones/somos.html
+++ b/secciones/somos.html
@@ -143,14 +143,14 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/hmQwLAc00bE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		</section>
-		<br><br>
+		
 			<!--tabla-->
 	<section id="section4">
 		<p><b>TABLA</b></p>
+		<p class="tableTitle">CONSIDERACIONES</p>
 		<table width="100%" border="1" cellpadding="0" cellspacing="2" style="border-collapse:separate;border-spacing:2px;border-color:blue;">
-            <caption class="tableTitle">CONSIDERACIONES</caption>
-			            
-			<tr><!-- inicio de fila-->   
+            
+				<tr><!-- inicio de fila-->   
                 <td>Alcance del servicio - Todo el Perú</td>   
             </tr><!-- cierre de fila -->  
             <br>
