--- a/menus+desplegable/piscinas.html
+++ b/menus+desplegable/piscinas.html
@@ -13,89 +13,92 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
-	<!--link de HTML con CSS estilos-->
+	<!--Bootstrap-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+		<!--link de HTML con CSS estilos-->
 	<link rel="stylesheet" href="../css/estilos.css">
 
 </head>
 
-<body class="body__backgroundproducts">
+<body class="body__background"> 
+<!-- inicio del header-->
+	    
+		<section class="cuadrado">
+		<div>
+			<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
+		</div>
 
-
-	<!-- inicio del header-->
-	    	
-	<div class="cuadrado"> 
-		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES</h1></div>
-	</div>
-	</div>
-<style>
-.cuadrado{
-padding:50px;
-margin:10px;
-background-color: #0000FF;
-border: solid 1px blue;
-color: white;
-background: linear-gradient(120deg, blue 40%, cyan);
-}
-</style>
-
-<div id="ejeCentral">
-<img class="esqudoLogo" src="../imagenes/esqudo_logo.png"
-alt="logotipo de Esqudo Protecciones">
-</div>
-
-<!--barra de navegación-->		
-<nav id="menu" class="header__navegador">
-	<ul>
-	<li class="header__navegador">
-		<a href="../index.html"><b>Inicio</b></a>
+		<div> 
+		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
+		</div>
+		</div>
 		
-		</li>	
-
-	<li class="header__navegador">
-		<a href="../secciones/servicios.html"><b>Servicios</b></a>
-		
-		</li>
-
-	<li class="header__navegador">
-		<a href="../secciones/productos.html"><b>Productos</b></a>
-		
-
-		<ul>
-			<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
-			<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
-			<li><a href="#">Balcones</a></li>
-			<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
-			</ul>			   
-		</li>
-
-	<li class="header__navegador">
-		<a href="../secciones/somos.html"><b>Somos</b></a>
-		
-		</li>
-
-	<li class="header__navegador">
-		<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
-		
-		</li>
-	</ul>
+		</section>
 	
-</nav>
-<!--Fin de barra de navegación-->	
-
-<br>
-
-<section id="section5">
-<!--redes sociales para Esqudo Protecciones-->
+<section class="navbar_redes--header">
+		<!--barra de navegación-->		
 <div>
-	<img class="btn--facebook" src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook">
-	<img class="btn--twitter" src="../imagenes/logo-twitter.JPG" alt="logotipo de Twitter">
-	<img class="btn--youtube" src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube">
+		<nav id="menu" class="header__navegador">
+		<ul>
+		<li class="header__navegador">
+			<a href="../index.html"><b>Inicio</b></a>
+			
+			</li>	
+
+		<li class="header__navegador">
+			<a href="../secciones/servicios.html"><b>Servicios</b></a>
+			
+			</li>
+
+		<li class="header__navegador">
+			<a href="../secciones/productos.html"><b>Productos</b></a>
+			
+
+			<ul>
+				<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
+				<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
+				<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
+				<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
+				</ul>			   
+			</li>
+
+		<li class="header__navegador">
+			<a href="../secciones/somos.html"><b>Somos</b></a>
+			
+			</li>
+
+		<li class="header__navegador">
+			<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
+			
+			</li>
+		</ul>
+		
+	</nav>
 </div>
+	<!--Fin de barra de navegación-->
+
+		<br>
+<!--redes sociales para Esqudo Protecciones-->
+
+<section class="redes_icons--header">
+<nav>
+	<ul class="redes_links--header">
+	<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
+	<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
+	<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
+	<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
+	</ul>
+</nav>
+</section>
 
 </section>
 
-</header>
+	</header>
 
 <!--fin del header-->
 
@@ -107,7 +110,14 @@ alt="logotipo de Esqudo Protecciones">
 	
 </section>
 
-
+<section id="estilos-ventanas" class="fondo-ventanas">
+	
+	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-1_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-2_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-3_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-4_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+	
+	</section>
 
 </main>
 
