Working in responsive

--- a/menus+desplegable/escaleras.html
+++ b/menus+desplegable/escaleras.html
@@ -26,13 +26,15 @@
 </head>
 
 <body class="body__background"> 
-<!-- inicio del header-->
-	    
+
+	<!-- inicio del header-->
+
+	<header>
 		<section class="cuadrado">
 		<div>
 			<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
 		</div>
-
+	
 		<div> 
 		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
 		</div>
@@ -40,38 +42,43 @@
 		
 		</section>
 	
-<section class="navbar_redes--header">
+		<input type="checkbox" id="btn-menu">
+		<label for="btn-menu"><img src="../imagenes/menu_hamburguesa.jpeg" alt="icono de menu hamburguesa">
+	
+		</label>
+	
+	<section class="navbar_redes--header">
 		<!--barra de navegación-->		
-<div>
-		<nav id="menu" class="header__navegador">
+	<div>
+		<nav class="menu2" id="menu" class="header__navegador">
 		<ul>
 		<li class="header__navegador">
 			<a href="../index.html"><b>Inicio</b></a>
 			
 			</li>	
-
+	
 		<li class="header__navegador">
 			<a href="../secciones/servicios.html"><b>Servicios</b></a>
 			
 			</li>
-
+	
 		<li class="header__navegador">
 			<a href="../secciones/productos.html"><b>Productos</b></a>
 			
-
+	
 			<ul>
 				<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
-				<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
+				<li><a href="#">Escaleras</a></li>
 				<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
 				<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
 				</ul>			   
 			</li>
-
+	
 		<li class="header__navegador">
 			<a href="../secciones/somos.html"><b>Somos</b></a>
 			
 			</li>
-
+	
 		<li class="header__navegador">
 			<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
 			
@@ -79,28 +86,28 @@
 		</ul>
 		
 	</nav>
-</div>
+	</div>
 	<!--Fin de barra de navegación-->
-
+	
 		<br>
-<!--redes sociales para Esqudo Protecciones-->
-
-<section class="redes_icons--header">
-<nav>
+	<!--redes sociales para Esqudo Protecciones-->
+	
+	<section class="redes_icons--header">
+	<nav>
 	<ul class="redes_links--header">
 	<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
 	<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
 	<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
 	<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
 	</ul>
-</nav>
-</section>
-
-</section>
-
+	</nav>
+	</section>
+	
+	</section>
+	
 	</header>
-
-<!--fin del header-->
+	
+	<!--fin del header-->
 
 <div>
 
@@ -176,9 +183,9 @@
 <section>
 <!--canales de comunicación-->
 <div id="section6">
-	<img src="../imagenes/mail-icon.jpg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
-	<img src="../imagenes/phone-icon.jpg" alt="imagen de un telefono para contactarse con Esqudo">
-	<img src="../imagenes/whatsapp-icon.jpg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
+	<img src="../imagenes/mail-icon.jpeg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
+	<img src="../imagenes/phone-icon.jpeg" alt="imagen de un telefono para contactarse con Esqudo">
+	<img src="../imagenes/whatsapp-icon.jpeg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
 
 </div>
 
