--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -26,78 +26,84 @@
 
 <body class="body__background"> 
 <!-- inicio del header-->
-	    
-		<section class="cuadrado">
-		<div>
-			<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
-		</div>
 
-		<div> 
-		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
-		</div>
-		</div>
-		
-		</section>
+<header>
+	<section class="cuadrado">
+	<div>
+		<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
+	</div>
+
+	<div> 
+	<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
+	</div>
+	</div>
 	
+	</section>
+
+	<input type="checkbox" id="btn-menu">
+	<label for="btn-menu"><img src="../imagenes/menu_hamburguesa.jpeg" alt="icono de menu hamburguesa">
+
+	</label>
+
 <section class="navbar_redes--header">
-		<!--barra de navegación-->		
+	<!--barra de navegación-->		
 <div>
-		<nav id="menu" class="header__navegador">
-		<ul>
-		<li class="header__navegador">
-			<a href="../index.html"><b>Inicio</b></a>
-			
-			</li>	
-
-		<li class="header__navegador">
-			<a href="#"><b>Servicios</b></a>
-			
-			</li>
-
-		<li class="header__navegador">
-			<a href="../secciones/productos.html"><b>Productos</b></a>
-			
-
-			<ul>
-				<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
-				<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
-				<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
-				<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
-				</ul>			   
-			</li>
-
-		<li class="header__navegador">
-			<a href="../secciones/somos.html"><b>Somos</b></a>
-			
-			</li>
-
-		<li class="header__navegador">
-			<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
-			
-			</li>
-		</ul>
+	<nav class="menu2" id="menu" class="header__navegador">
+	<ul>
+	<li class="header__navegador">
+		<a href="../index.html"><b>Inicio</b></a>
 		
-	</nav>
-</div>
-	<!--Fin de barra de navegación-->
+		</li>	
 
-		<br>
+	<li class="header__navegador">
+		<a href="#"><b>Servicios</b></a>
+		
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/productos.html"><b>Productos</b></a>
+		
+
+		<ul>
+			<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
+			<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
+			<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
+			<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
+			</ul>			   
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/somos.html"><b>Somos</b></a>
+		
+		</li>
+
+	<li class="header__navegador">
+		<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
+		
+		</li>
+	</ul>
+	
+</nav>
+</div>
+<!--Fin de barra de navegación-->
+
+	<br>
 <!--redes sociales para Esqudo Protecciones-->
 
 <section class="redes_icons--header">
 <nav>
-	<ul class="redes_links--header">
-	<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
-	<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
-	<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
-	<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
-	</ul>
+<ul class="redes_links--header">
+<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
+<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
+<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
+<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
+</ul>
 </nav>
 </section>
 
 </section>
 
-	</header>
+</header>
 
 <!--fin del header-->
 
@@ -228,16 +234,16 @@
 <section>
 <!--canales de comunicación-->
 <div id="section6">
-	<img src="../imagenes/mail-icon.jpg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
-	<img src="../imagenes/phone-icon.jpg" alt="imagen de un telefono para contactarse con Esqudo">
-	<img src="../imagenes/whatsapp-icon.jpg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
+	<img src="../imagenes/mail-icon.jpeg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
+	<img src="../imagenes/phone-icon.jpeg" alt="imagen de un telefono para contactarse con Esqudo">
+	<img src="../imagenes/whatsapp-icon.jpeg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
 
 </div>
 
 </section>
 
 <div class="esqudoCopyright">
-<p>Esqudo Protecciones - © Copyright 2021</p>
+<p>Derechos reservador Esqudo Protecciones - © Copyright 2021</p>
 </div>
 
 	
