--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <body class="body__background"> 
 <!-- inicio del header-->
-	    
+
+<header>
 		<section class="cuadrado">
 		<div>
 			<img class="esqudoLogo" src="imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
@@ -38,11 +39,16 @@
 		</div>
 		
 		</section>
+
+		<input type="checkbox" id="btn-menu">
+		<label for="btn-menu"><img src="imagenes/menu_hamburguesa.jpeg" alt="icono de menu hamburguesa">
+
+		</label>
 	
 <section class="navbar_redes--header">
 		<!--barra de navegación-->		
 <div>
-		<nav id="menu" class="header__navegador">
+		<nav class="menu2" id="menu" class="header__navegador">
 		<ul>
 		<li class="header__navegador">
 			<a href="#"><b>Inicio</b></a>
@@ -220,16 +226,16 @@
 <section id="section6">
 <!--canales de comunicación-->
 	<div>
-		<img src="imagenes/mail-icon.jpg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
-		<img src="imagenes/phone-icon.jpg" alt="imagen de un telefono para contactarse con Esqudo">
-		<img src="imagenes/whatsapp-icon.jpg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
+		<img src="imagenes/mail-icon.jpeg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
+		<img src="imagenes/phone-icon.jpeg" alt="imagen de un telefono para contactarse con Esqudo">
+		<img src="imagenes/whatsapp-icon.jpeg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
 	
 	</div>
 
 </section>
 
 <div class="esqudoCopyright">
-	<p>Esqudo Protecciones - © Copyright 2021</p>
+	<p>Derechos reservados Esqudo Protecciones - © Copyright 2021</p>
 </div>
 
 		
