improving HTML and styles CSS

--- a/menus+desplegable/piscinas.html
+++ b/menus+desplegable/piscinas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mallas para Pisicnas | Esqudo Mallas</title>
 	<meta name="description" content="Empresa dedicada a la seguridad de niños y mascotas a través de mallas protectoras en ventanas, escaleras, balcones, barandas, piscinas y más. Para prevenir accidentes, de una forma confiable, estética y segura. ¡Visítanos ahora!">
-	<meta name="keywords" content="mallas de seguridad, mallas protectoras, mallas anticaídas, mallas de seguridad precios, redes protectoras, redes de seguridad, seguridad, ventanas seguras, balcones seguros, escaleras seguras, rejas, rejas de madera, mallas para piscinas, seguridad niños, seguridad bebes, protección de niños, protección bebes, protección para mascotas, protección para gatos, instalación de mallas, mantenimiento de mallas, mallas transparentes, pequemallas, mallas y mallas, mallas kids">
+	<meta name="keywords" content="mallas, protectoras, anticaídas, redes, ventanas, balcones, escaleras, seguras, rejas, piscinas, niños, bebes, protección, mascotas, gatos, perros, instalación, mantenimiento">
 
 
 	<!--Traje font-family de Google Fonts -->
@@ -28,174 +28,104 @@
 <body class="body__background"> 
 
 	<!-- inicio del header-->
-
 	<header>
 		<section class="cuadrado">
-		<div>
-			<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
-		</div>
-	
-		<div> 
-		<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
-		</div>
-		</div>
-		
+			<div>
+				<img class="esqudoLogo" src="../imagenes/esqudo_logo.png" alt="logotipo de Esqudo Protecciones">
+			</div>
+			<div> 
+				<div class="animacion-h1"><h1 class="encabezadoHeader">ESQUDO MALLAS Y PROTECCIONES                933815098 - 992609724</h1></div>
+			</div>
 		</section>
+			<input type="checkbox" id="btn-menu">
+			<label for="btn-menu"><img src="../imagenes/menu_hamburguesa.jpeg" alt="icono de menu hamburguesa"></label>
+			<section class="navbar_redes--header">
 	
-		<input type="checkbox" id="btn-menu">
-		<label for="btn-menu"><img src="../imagenes/menu_hamburguesa.jpeg" alt="icono de menu hamburguesa">
-	
-		</label>
-	
-	<section class="navbar_redes--header">
-		<!--barra de navegación-->		
-	<div>
-		<nav class="menu2" id="menu" class="header__navegador">
-		<ul>
-		<li class="header__navegador">
-			<a href="../index.html"><b>Inicio</b></a>
-			
-			</li>	
-	
-		<li class="header__navegador">
-			<a href="../secciones/servicios.html"><b>Servicios</b></a>
-			
-			</li>
-	
-		<li class="header__navegador">
-			<a href="../secciones/productos.html"><b>Productos</b></a>
-			
-	
-			<ul>
-				<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
-				<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
-				<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
-				<li><a href="#">Piscinas</a></li>
-				</ul>			   
-			</li>
-	
-		<li class="header__navegador">
-			<a href="../secciones/somos.html"><b>Somos</b></a>
-			
-			</li>
-	
-		<li class="header__navegador">
-			<a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
-			
-			</li>
-		</ul>
-		
-	</nav>
-	</div>
+	<!--barra de navegación-->		
+			<div>
+				<nav class="menu2" id="menu" class="header__navegador">
+					<ul>
+						<li class="header__navegador"><a href="../index.html"><b>Inicio</b></a></li>	
+						<li class="header__navegador"><a href="../secciones/servicios.html"><b>Servicios</b></a></li>
+						<li class="header__navegador"><a href="../secciones/productos.html"><b>Productos</b></a>
+						<ul>
+							<li><a href="../menus+desplegable/ventanas.html">Ventanas</a></li>
+							<li><a href="../menus+desplegable/escaleras.html">Escaleras</a></li>
+							<li><a href="../menus+desplegable/balcones.html">Balcones</a></li>
+							<li><a href="../menus+desplegable/piscinas.html">Piscinas</a></li>
+						</ul>			   
+						</li>
+						<li class="header__navegador"><a href="../secciones/somos.html"><b>Somos</b></a></li>
+						<li class="header__navegador"><a href="../secciones/solicitarcotizacion.html"><b>Solicitar cotización</b></a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 	<!--Fin de barra de navegación-->
 	
-		<br>
-	<!--redes sociales para Esqudo Protecciones-->
+	<!--redes sociales Esqudo Protecciones-->
 	
-	<section class="redes_icons--header">
-	<nav>
-	<ul class="redes_links--header">
-	<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
-	<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
-	<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
-	<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
-	</ul>
-	</nav>
-	</section>
-	
-	</section>
-	
+			<section class="redes_icons--header">
+				<nav>
+					<ul class="redes_links--header">
+						<li><a href="https://www.facebook.com/esqudoprotecciones/"><img src="../imagenes/logo-facebook.JPG" alt="logotipo de Facebook"></a></li>
+						<li><a href="https://www.instagram.com/esqudoprotecciones/"><img src="../imagenes/logo-instagram.JPG" alt="logotipo de Instagram"></a></li>
+						<li><a href="https://www.youtube.com/channel/UCEH6dRPBygtDUc_TT_QBxJA"><img src="../imagenes/logo-youtube.JPG" alt="logotipo de Youtube"></a></li>
+						<li><a href="https://wa.me/message/Z5TFVHRZ3CKFK1"><img src="../imagenes/logo-whatsapp.JPG" alt="logotipo de Whatsapp"></a></li>
+					</ul>
+				</nav>
+				</section>
+			</section>
 	</header>
 	
 	<!--fin del header-->
 
-<div>
+	<main>
 
-<section id="section2-ventanas">
+		<section id="section2-ventanas">
 
-	<p><b><h2 class="h2Productos">MALLAS PARA PISCINAS</h2></b></p>
+			<p><b><h2 class="h2Productos">MALLAS PARA PISCINAS</h2></b></p>
 	
-</section>
+		</section>
 
-<section id="estilos-ventanas" class="fondo-ventanas">
+		<section id="estilos-ventanas" class="fondo-ventanas">
 	
-	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-1_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
-	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-2_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
-	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-3_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
-	<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-4_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-1_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-2_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-3_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
+			<div class="fotosventanas-container-img"> <img class="fotos-ventanas" src="../imagenes/piscina-4_contexto.jpeg" alt="malla protectora instalada en piscina"> </div>
 	
-	</section>
+		</section>
 
-</main>
+	</main>
 
 <!--inicio de footer-->
 
+<footer>
+	<nav class="footer_navegador">
+		<ul>
+			<li class="footer_navegador"><a href="../index.html"><b>Inicio</b></a></li>
+			<li class="footer_navegador"><a href="#"><b>Testimonios</b></a></li>
+			<li class="footer_navegador"><a href="#"><b>Clientes</b></a></li>	
+			<li class="footer_navegador"><a href="#"><b>Blogs</b></a></li>
+			<li class="footer_navegador"><a href="#"><b>Agendar visita a domicilio</b></a></li>
+		</ul>
+	</nav>		
 
-<nav>
-		
-	<div class="cuadrado">Desarrollado por M@aster</div>
-	<style>
-	.cuadrado{
-	padding:50px;
-	margin:10px;
-	background-color: #0000FF;
-	border: solid 1px blue;
-	color: white;
-	}
-	</style>
+	<!--canales de comunicación-->
+	<section id="section6">
+		<div>
+			<img src="../imagenes/mail-icon.jpeg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
+			<img src="../imagenes/phone-icon.jpeg" alt="imagen de un telefono para contactarse con Esqudo">
+			<img src="../imagenes/whatsapp-icon.jpeg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
+		</div>
+	</section>
+		<div class="esqudoCopyright">
+			<p>Derechos reservados Esqudo Protecciones - © Copyright 2021</p>
+		</div>
+		<div class="cuadrado">Desarrollado por M@aster Studio Digit@L </div>
+</footer>
 
-</nav>
-
-	<br>
-<nav class="footer_navegador">
-	<ul>
-
-	<li class="footer_navegador">	
-		<a href="#"><b>Inicio</b></a>
-
-	</li>
-
-	<li class="footer_navegador">
-		<a href="#"><b>Testimonios</b></a>
-	</li>
-	
-	<li class="footer_navegador">
-		<a href="#"><b>Clientes</b></a>
-
-	</li>	
-	
-	<li class="footer_navegador">
-		<a href="#"><b>Blogs</b></a>
-		
-	</li>
-	
-	<li class="footer_navegador">
-		<a href="#"><b>Agendar visita a domicilio</b></a>
-		
-	</li>
-	
-	</ul>
-
-</nav>		
-	
-
-<section>
-<!--canales de comunicación-->
-<div id="section6">
-	<img src="../imagenes/mail-icon.jpeg" alt="imagen de un sobre para correo electrónico de Esqudo"> 
-	<img src="../imagenes/phone-icon.jpeg" alt="imagen de un telefono para contactarse con Esqudo">
-	<img src="../imagenes/whatsapp-icon.jpeg" alt="el logotipo de Whatsapp para enviar mensajes a Esqudo">
-
-</div>
-
-</section>
-
-<div class="esqudoCopyright">
-<p>Esqudo Protecciones - © Copyright 2021</p>
-</div>
-
-	
-<br>	
 <!--fin del footer-->
 
 </body>
